--- a/SourceCode/CMakeLists.txt
+++ b/SourceCode/CMakeLists.txt
@@ -15,8 +15,8 @@ include(CMake/Utils.cmake)
 # Additional Global Settings(add specific info there)
 ################################################################################
 include(CMake/GlobalSettingsInclude.cmake OPTIONAL)
-set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DLINUX -w -fpermissive")
-set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DLINUX -w -fpermissive")
+set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -DLINUX -DLINUX64 -w -fpermissive")
+set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DLINUX -DLINUX64 -w -fpermissive")
 
 ################################################################################
 # Use solution folders feature
