--- a/SourceCode/CMakeLists.txt
+++ b/SourceCode/CMakeLists.txt
@@ -28,3 +28,4 @@ set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 ################################################################################
 add_subdirectory(CryCommon)
 add_subdirectory(CrySystem)
+add_subdirectory(CryScriptSystem)
