Lots of fixes for CryNetwork

--- a/SourceCode/CMakeLists.txt
+++ b/SourceCode/CMakeLists.txt
@@ -29,3 +29,4 @@ set_property(GLOBAL PROPERTY USE_FOLDERS ON)
 add_subdirectory(CryCommon)
 add_subdirectory(CrySystem)
 add_subdirectory(CryScriptSystem)
+add_subdirectory(CryNetwork)
