Changes to make CryPhysics build

--- a/SourceCode/CMakeLists.txt
+++ b/SourceCode/CMakeLists.txt
@@ -30,3 +30,4 @@ add_subdirectory(CryCommon)
 add_subdirectory(CrySystem)
 add_subdirectory(CryScriptSystem)
 add_subdirectory(CryNetwork)
+add_subdirectory(CryPhysics)
