Mostly capitalization fixes although doesnt build

--- a/SourceCode/CMakeLists.txt
+++ b/SourceCode/CMakeLists.txt
@@ -31,3 +31,4 @@ add_subdirectory(CrySystem)
 add_subdirectory(CryScriptSystem)
 add_subdirectory(CryNetwork)
 add_subdirectory(CryPhysics)
+add_subdirectory(RenderDll/XRenderNULL)
