Preparations for Linux port of CryInput

--- a/SourceCode/CMakeLists.txt
+++ b/SourceCode/CMakeLists.txt
@@ -32,3 +32,4 @@ add_subdirectory(CryScriptSystem)
 add_subdirectory(CryNetwork)
 add_subdirectory(CryPhysics)
 add_subdirectory(RenderDll/XRenderNULL)
+add_subdirectory(CryInput)
