CryFont now builds and (somewhat) loads

--- a/SourceCode/CMakeLists.txt
+++ b/SourceCode/CMakeLists.txt
@@ -34,3 +34,4 @@ add_subdirectory(CryPhysics)
 add_subdirectory(RenderDll/XRenderNULL)
 #add_subdirectory(CryInput) Denis Koveshnikov is working on this
 add_subdirectory(CrySoundSystem)
+add_subdirectory(CryFont)
