CryAISystem and CryEntitySystem now build and load

--- a/SourceCode/AMD64_ProjectFiles_VS2005/CryGame/CryGame.vcproj
+++ b/SourceCode/AMD64_ProjectFiles_VS2005/CryGame/CryGame.vcproj
@@ -1394,7 +1394,7 @@
 					>
 				</File>
 				<File
-					RelativePath=".\ScriptObjectStream.h"
+					RelativePath=".\ScriptObjectstream.h"
 					>
 				</File>
 				<File
