--- a/SourceCode/CryGame/CryGame_XBox.vcproj
+++ b/SourceCode/CryGame/CryGame_XBox.vcproj
@@ -511,7 +511,7 @@
 				RelativePath="ScriptObjectSpectator.h">
 			</File>
 			<File
-				RelativePath=".\ScriptObjectStream.h">
+				RelativePath=".\ScriptObjectstream.h">
 			</File>
 			<File
 				RelativePath=".\ScriptObjectVehicle.h">
