--- a/SourceCode/CryGame/CryGame.vcproj
+++ b/SourceCode/CryGame/CryGame.vcproj
@@ -1016,7 +1016,7 @@
 					RelativePath="ScriptObjectSpectator.h">
 				</File>
 				<File
-					RelativePath=".\ScriptObjectStream.h">
+					RelativePath=".\ScriptObjectstream.h">
 				</File>
 				<File
 					RelativePath=".\ScriptObjectSynched2DTable.h">
