CryGame now builds for Linux

--- a/SourceCode/CMakeLists.txt
+++ b/SourceCode/CMakeLists.txt
@@ -39,3 +39,4 @@ add_subdirectory(CryAISystem)
 add_subdirectory(CryEntitySystem)
 #add_subdirectory(CryAnimation)
 add_subdirectory(Cry3DEngine)
+add_subdirectory(CryGame)
