--- a/SourceCode/CMakeLists.txt
+++ b/SourceCode/CMakeLists.txt
@@ -37,6 +37,6 @@ add_subdirectory(CrySoundSystem)
 add_subdirectory(CryFont)
 add_subdirectory(CryAISystem)
 add_subdirectory(CryEntitySystem)
-#add_subdirectory(CryAnimation)
+add_subdirectory(CryAnimation)
 add_subdirectory(Cry3DEngine)
 add_subdirectory(CryGame)
