Experimental changes - use with caution

--- a/SourceCode/CMakeLists.txt
+++ b/SourceCode/CMakeLists.txt
@@ -31,7 +31,8 @@ add_subdirectory(CrySystem)
 add_subdirectory(CryScriptSystem)
 add_subdirectory(CryNetwork)
 add_subdirectory(CryPhysics)
-add_subdirectory(RenderDll/XRenderNULL)
+#add_subdirectory(RenderDll/XRenderNULL)
+#add_subdirectory(RenderDll/XRenderOGL)
 #add_subdirectory(CryInput) Denis Koveshnikov is working on this
 add_subdirectory(CrySoundSystem)
 add_subdirectory(CryFont)
