--- a/SourceCode/CMakeLists.txt
+++ b/SourceCode/CMakeLists.txt
@@ -31,7 +31,7 @@ add_subdirectory(CrySystem)
 add_subdirectory(CryScriptSystem)
 add_subdirectory(CryNetwork)
 add_subdirectory(CryPhysics)
-#add_subdirectory(RenderDll/XRenderNULL)
+add_subdirectory(RenderDll/XRenderNULL)
 #add_subdirectory(RenderDll/XRenderOGL)
 #add_subdirectory(CryInput) Denis Koveshnikov is working on this
 add_subdirectory(CrySoundSystem)
@@ -41,3 +41,4 @@ add_subdirectory(CryEntitySystem)
 add_subdirectory(CryAnimation)
 add_subdirectory(Cry3DEngine)
 add_subdirectory(CryGame)
+add_subdirectory(FARCRY)
