--- a/SourceCode/CryPhysics/CMakeLists.txt
+++ b/SourceCode/CryPhysics/CMakeLists.txt
@@ -46,7 +46,7 @@ set(SRC_FILES
 add_library(${PROJECT_NAME} SHARED ${SRC_FILES})
 
 target_include_directories(${PROJECT_NAME} PRIVATE
-    ${CMAKE_SOURCE_DIR}/CryCommon
+    ${CMAKE_SOURCE_DIR}/SourceCode/CryCommon
 )
 
 target_link_libraries(${PROJECT_NAME})
