--- a/SourceCode/CryScriptSystem/CMakeLists.txt
+++ b/SourceCode/CryScriptSystem/CMakeLists.txt
@@ -44,7 +44,7 @@ set(SRC_FILES
 add_library(${PROJECT_NAME} SHARED ${SRC_FILES})
 
 target_include_directories(${PROJECT_NAME} PRIVATE
-    ${CMAKE_SOURCE_DIR}/CryCommon
+    ${CMAKE_SOURCE_DIR}/SourceCode/CryCommon
     ${CMAKE_CURRENT_SOURCE_DIR}/LUA
 )
 
