--- a/SourceCode/RenderDll/XRenderNULL/CMakeLists.txt
+++ b/SourceCode/RenderDll/XRenderNULL/CMakeLists.txt
@@ -110,8 +110,8 @@ set(SRC_FILES
 add_library(${PROJECT_NAME} SHARED ${SRC_FILES})
 
 target_include_directories(${PROJECT_NAME} PRIVATE
-    ${CMAKE_SOURCE_DIR}/CryCommon
-    ${CMAKE_SOURCE_DIR}/RenderDll
+    ${CMAKE_SOURCE_DIR}/SourceCode/CryCommon
+    ${CMAKE_SOURCE_DIR}/SourceCode/RenderDll
 )
 
 target_link_directories(${PROJECT_NAME} PRIVATE
