--- a/SourceCode/RenderDll/XRenderOGL/CMakeLists.txt
+++ b/SourceCode/RenderDll/XRenderOGL/CMakeLists.txt
@@ -140,7 +140,7 @@ set(ARCH_LIBS ijl15.lib)
 add_library(${PROJECT_NAME} SHARED ${SRC_FILES})
 
 target_include_directories(${PROJECT_NAME} PRIVATE
-    ${CMAKE_SOURCE_DIR}/CryCommon
+    ${CMAKE_SOURCE_DIR}/SourceCode/CryCommon
     ${CMAKE_SOURCE_DIR}/RenderDll
     ${CMAKE_SOURCE_DIR}/RenderDll/Common/Shaders
 )
