--- a/.github/workflows/ci_linux.yml
+++ b/.github/workflows/ci_linux.yml
@@ -30,7 +30,7 @@ jobs:
         submodules: 'recursive'
     - name: Install libs
       run: |
-        sudo apt-get update && sudo apt-get install meson
+        sudo apt-get update && sudo apt-get install meson libgl-dev
     - name: Configure and build
       run: |
         mkdir build && cd build
